# WidgetsQT

./: .gitignore  flake.nix  meson.build  run.sh
Config/: meson.build
Config/include/Config/Widgets/Bar/: bar.hpp
Config/include/Config/Widgets/SettingsMenu/: settings_menu.hpp
Config/include/Config/private/widgets/settingsmenu/: settings_menu_p.hpp
Config/include/widgets/: bar.hpp
Config/src/: main.cpp
Config/src/widgets/: bar.cpp
Config/src/widgets/bar/: bar.cpp
Config/src/widgets/settings_menu/: settings_menu.cpp
Core/: meson.build
Core/include/: application.hpp
Core/include/widgets/: window.hpp
Core/src/: application.cpp
Core/src/widgets/: window.cpp
Opal/: meson.build
Opal/Core/: meson.build
Opal/Core/include/Opal/Core/: application.hpp
Opal/Core/include/Opal/Core/Settings/: settings.hpp
Opal/Core/include/Opal/Core/private/: application_p.hpp
Opal/Core/src/: application.cpp
Opal/Core/src/settings/: settings.cpp
Opal/Util/: meson.build
Opal/Util/SassEmbedded/: meson.build
Opal/Util/SassEmbedded/include/Opal/Util/SassEmbedded/: sass.hpp
Opal/Util/SassEmbedded/src/: sass.cpp
Opal/Widgets/: meson.build
Opal/Widgets/include/Opal/Widgets/: centerbox.hpp  window.hpp
Opal/Widgets/src/: centerbox.cpp  window.cpp
styles/: main.scss
styles/Bar/: index.scss
styles/SettingsMenu/: index.scss
